--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -242,6 +242,24 @@
           "light": "#230026",
           "highContrast": "#230026"
         }
+      },
+      {
+        "id": "cursorless.scopeContentBackground",
+        "description": "Background color to use for calibrating timing when recording a video",
+        "defaults": {
+          "dark": "#230026",
+          "light": "#230026",
+          "highContrast": "#230026"
+        }
+      },
+      {
+        "id": "cursorless.scopeContentBorder",
+        "description": "Border color to use for calibrating timing when recording a video",
+        "defaults": {
+          "dark": "#230026",
+          "light": "#230026",
+          "highContrast": "#230026"
+        }
       }
     ],
     "configurationDefaults": {
